2009-02-16  Thomas Thurman  <thomas.thurman@collabora.co.uk>

	* matchbox/core/mb-wm-client-window.c: initialise cookies
        so the compiler won't complain about it

2009-02-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	* matchbox/client-types/mb-wm-client-dialog.c
	(mb_wm_client_dialog_init): Respect the undecorated flag when
	determining the size of the dialog.

2009-02-13  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Release 0.2.17

2009-02-13  Gordon Williams  <gordon.williams@collabora.co.uk>
	
	* matchbox/core/mb-wm-decor.c
	* matchbox/core/mb-wm-decor.h:
	  Reverted previous (2009-02-12) changes as no longer required

2009-02-12  Gordon Williams  <gordon.williams@collabora.co.uk>
	
	* matchbox/core/mb-wm-decor.c
	* matchbox/core/mb-wm-decor.h:
	  Added signals for button pressed + released (to help hd-button
	  highlight correctly)
	* matchbox/core/mb-window-manager.h:
	  Fixed typo

2009-02-12  Kimmo Hämäläinen  <kimmo.hamalainen@nokia.com>

	Fixes for Coverity issues:
	* matchbox/client-types/mb-wm-client-desktop.c
	(mb_wm_client_desktop_init): Remove unused return value.
	* matchbox/client-types/mb-wm-client-app.c (mb_wm_client_app_init):
	Remove unused return value.
	* matchbox/comp-mgr/mb-wm-comp-mgr-clutter.c
	(mb_wm_comp_mgr_clutter_turn_off_real): NULL-check 'mgr' before (not
	after) dereferencing it.
	(mb_wm_comp_mgr_clutter_client_configure_real): Remove useless check
	for window.
	(tidy_texture_frame_class_init): Remove unused return value.
	* matchbox/core/mb-wm-root-window.c (mb_wm_root_window_init):
	NULL-check 'wm' before using it.
	* matchbox/core/mb-wm-main-context.c
	(mb_wm_main_context_x_event_handler_add): Free 'func_info' in Expose
	and default case.
	(mb_wm_main_context_x_event_handler_remove): NULL-check l_start before
	using it.
	* matchbox/core/mb-wm-decor.c (mb_wm_decor_init): Add a missing break.
	(mb_wm_decor_button_stock_new): NULL-check decor->parent_client before
	(not after) using it.